# Net-control

./: ARCNetScript-x86_64.AppImage  ARCNetScript.pro  CMakeLists.txt  NetScriptGenerator.pro  README.md  install.txt  net-control.py  net-script.cpp  requirements.txt
.github/workflows/: build-windows-exe.yml  build.yml
